hphp/test/slow/traits/require_constraint_iface_implements_error.php.expectf
Fatal error: Only traits may use 'require implements'. in %s on line 4
